src/objects/Product_Extension__c.object
<CustomObject>
    <fields>
        <fullName>BL__c</fullName>
        <formula>Product__r.Business_Line_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>TEXT(Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor_Price__c</fullName>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>13</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Price__c</fullName>
        <label>Market Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market North America</fullName>
                </value>
                <value>
                    <fullName>Market Latin America</fullName>
                </value>
                <value>
                    <fullName>Market Middle East and Africa</fullName>
                </value>
                <value>
                    <fullName>Market India</fullName>
                </value>
                <value>
                    <fullName>Market Greater China</fullName>
                </value>
                <value>
                    <fullName>Market Europe</fullName>
                </value>
                <value>
                    <fullName>Market Asia Pacific &amp; Japan</fullName>
                </value>
                <value>
                    <fullName>BigWeb/TXLE</fullName>
                </value>
                <value>
                    <fullName>TEPS</fullName>
                </value>
                <value>
                    <fullName>NNO Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <formula>Product__r.NokiaCPQ_Portfolio_Package_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Extensions</relationshipLabel>
        <relationshipName>Product_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>CSP</fullName>
                </value>
                <value>
                    <fullName>QTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Extension</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Group__c</columns>
        <columns>Floor_Price__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Product__c</columns>
        <columns>BL__c</columns>
        <columns>BU__c</columns>
        <columns>Custom_Bid__c</columns>
        <columns>Market__c</columns>
        <columns>Market_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_View</fullName>
        <columns>NAME</columns>
        <columns>Business_Group__c</columns>
        <columns>Custom_Bid__c</columns>
        <columns>Floor_Price__c</columns>
        <columns>Market__c</columns>
        <columns>Market_Price__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Product__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Stream__c</columns>
        <filterScope>Everything</filterScope>
        <label>Display</label>
    </listViews>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Product Extension Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Extensions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>